[tool.poetry]
name = "threatfox-censys"
version = "0.1.3"
description = "Threatfox Censys is a tool to query Censys Search for IP addresses and domains and then parses the JSON and submits the results to Threatfox."
authors = ["Aidan Holland <aidan@censys.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
threatfox-censys = "threatfox_censys.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
censys = "^2.2.9"
requests = "*"
python-dotenv = "^1.0.0"
pydantic = "^2.7.0"
pyyaml = "^6.0.1"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.0.3"
psycopg2 = "^2.9.9"
inquirerpy = "^0.3.4"
backoff = "^2.2.1"
mastodon-py = "^1.8.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pyupgrade = "^3.15.0"
responses = "^0.24.0"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = "threatfox_censys"
known_third_party = "censys,requests,pydantic,pyyaml,pytest,dotenv"
